import "libnutrition/proto/data/single_food.proto";
import "libnutrition/proto/data/composite_food.proto";
import "libnutrition/proto/data/template.proto";
import "libnutrition/proto/data/meal.proto";
import "libnutrition/proto/data/nutrient.proto";
import "libnutrition/proto/data/unit.proto";
import "libnutrition/proto/data/specialized_unit.proto";
import "libnutrition/proto/data/group.proto";
import "libnutrition/proto/data/user.proto";

message FoodData 
{
	repeated SingleFoodData singleFoods = 1;
	
	repeated CompositeFoodData compositeFoods = 2;
	
	repeated TemplateData templates = 3;
	
	repeated MealData meals = 4;	
}
