import "libnutrition/proto/error.proto";

message SingleFoodData
{
	required int32 id = 1;
	
	optional string name = 2;
	
	optional int32 ownerId = 3;
	
	enum EntrySource {
		USDA = 0;
		Import = 1;
		Custom = 2;
	}
	
	optional EntrySource entrySource = 4;
	
	optional int32 groupId = 5;
	
	optional double percentRefuse = 6;
	
	optional string refuseDescription = 7;
	
	message NutrientAmount 
	{
		required int32 nutrientId = 1;
		optional double amount = 2;
		optional string unitAbbreviation = 3 [default = "g"];
	}
	
	repeated NutrientAmount nutrientAmounts = 8;
	
	optional double weightAmount = 9;
	
	optional double volumeAmount = 10;
	
	optional double quantityAmount = 11;
	
	optional double servingAmount = 12;
	
	optional double energyDensityFat = 13;
	
	optional double energyDensityProtein = 14;
	
	optional double energyDensityCarbohydrate = 15;
	
	optional double energyDensityAlcohol = 16;
}

message SingleFoodLoadRequest 
{
	optional bool omit = 1 [default = false];
	optional bool nameAndIdOnly = 2 [default = false];
	repeated int32 requestedIds = 3	;
}

message SingleFoodLoadResponse
{
	repeated SingleFoodData singleFoods = 1;
	optional Error error = 100;
}

message SingleFoodStoreRequest
{
	repeated SingleFoodData singleFoods = 1;
}

message SingleFoodStoreResponse
{
	repeated int32 storedIds = 1;
	optional Error error = 100;
}

message SingleFoodDeleteRequest
{
	repeated int32 deleteIds = 1;
}

message SingleFoodDeleteResponse
{
	repeated int32 deletedIds = 1;
	optional Error error = 100;
}